<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudokoer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_open_cv">OpenCVActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_solution">SolutionActivity</string>
    
    <string name="versionNumber">v1.0</string>
    
    <string name="solve">Solve</string>
    <string name="autoinput">Auto Input (Experimental)</string>
    <string name="manualinput">Manual Input</string>
    <string name="takephoto">Take Photo</string>
    <string name="startsudoku">Start Sudoku</string>
    <string name="newpuzzle">New Puzzle</string>
    
    <string name="blank"> </string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

</resources>
